# truss

./: .flake8  pyproject.toml
truss-modelling/: pyproject.toml
truss-modelling/truss_modelling/trition/: __init__.py  helpers.py
