[tool.poetry]
name = "truss-modelling"
version = "0.1.0"
description = "Utilities for super-charging truss model implementaitons."
authors = [
    "Baseten <engineers@basten.co>",
    "marius.baseten <marius.killinger@baseten.co>",
]
license = "MIT"

[tool.poetry.dependencies]
colorama = "^0.4.6"
numpy = "^1.26.4"
pandas = "^2.2.0"
pydantic = "^1.10.9"
python = ">=3.9,<3.12"
truss = { git = "https://github.com/basetenlabs/truss.git" }

[tool.poetry.group.triton.dependencies]
tritonclient = { extras = ["grpc", "http"], version = "^2.42.0" }

[tool.poetry.group.triton-cuda.dependencies]
tritonclient = { extras = ["all"], version = "^2.42.0" }


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^7.0.0"
ipython = "^8.14.0"
isort = "^5.12.0"
mypy = "^1.8.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
